--- a/LSFA/LSFA.tex
+++ b/LSFA/LSFA.tex
@@ -146,7 +146,7 @@ In this work we begin the investigation of  semi-substructural logics with \emph
 
 In Section \ref{sec:focusing}, we introduce a sequent calculus of proofs in normal form, i.e. canonical representative of the equivalence relation on derivations $\circeq$. The design of the latter calculus is again inspired by the ideas of Andreoli and it describes a sound and complete root-first proof search strategy for the original sequent calculus. Completeness is achieved by marking sequents with lists of \emph{tags}, a mechanism introduced by Uustalu et al. \cite{UVW:protsn} and inspired by Scherer and R{\'e}my's saturation technique \cite{scherer:simple:2015}, which helps to completely eliminate all unnecessary non-determinism in proof search and faithfully capture normal forms wrt. the congruence relation on derivations in the original sequent calculus. %In a sense, this is similar to what proof nets are used for.
 
-To showcase the modularity of our normalization strategy, in Section \ref{sec:extensions} we discuss extensions of the logic with other connectives, such as additive units, the structural rule of exchange in the style of Bourke and Lack, and implication.
+To showcase the modularity of our normalization strategy, in Section \ref{sec:extensions} we discuss extensions of the logic with other connectives, such as additive units, the structural rule of exchange in the style of Bourke and Lack, and linear implication.
 This indicates that our normalization techniques is potentially scalable to  other richer substructural logics arising as extensions of ours, e.g. full Lambek calculus or intuitionistic linear logic.
 
 The sequent calculi of Sections \ref{sec:sequent-calculus} and \ref{sec:focusing}, as well as the effective normalization procedure, have been fully formalized in the Agda proof assistant. The code is freely available at
@@ -786,7 +786,7 @@ The proof search of a sequent $S \mid \Gamma \vdash_\RI A$ proceeds as follows:
 The proof search of a sequent $T \mid \Gamma \vdash^{l}_\RI A$ proceeds as follows (notice that at this point in proof search the stoup $T$ is necessarily irreducible):
 \begin{itemize}
   \item[($\vdash^{l}_{\RI}$)] We apply the $\andr$ rule to decompose the succedent and separate the list of tags carefully until the succedent becomes non-negative and the list of tags becomes a singleton $t$, then we move to phase $\vdash_\LI^t$ by an application of $\LI2 \RI$.
-  \item[($\vdash^{t}_{\LI}$)] Since the stoup is either empty or a negative formula, we immediately switch to phase $\vdash_\F$ with an application of $\F 2 \LI$.
+  \item[($\vdash^{t}_{\LI}$)] Since the stoup is either empty or a negative formula, we immediately switch to phase $\vdash_\F$ with an application of $\F 2 \LI$. This is why it makes sense to only consider rules $\unitl$, $\tl$, $\orl$ in which sequents are not marked by list of tags.
   % \item[($\vdash^{t}_{\Pass}$)] In this phase, $\pass$ can be applied only when the stoup is empty and the conclusion sequent has the tag $\tP$. For other cases, we should move to the focusing phase directly.
   \item[($\vdash^{t}_{\F}$)] If $t = \tE$ we can apply either $\ax$, $\unitr$ or right non-invertible rules. Again, when applying right non-invertible rules we need to provide a new valid list of tags.
   Left non-invertible rules can be applied only when the tag is correct, i.e. $\pass$ with tag $\tP$, $\andlone$ with tag $\tCone$, and $\andltwo$ with tag $\tCtwo$.
@@ -1141,7 +1141,7 @@ The second lemma corresponds to the invertibility of phase $\vdash_\RI$.
   %   \end{itemize} 
   % \end{itemize}
 \end{proof}
-Finally, a right non-invertible rule in (\ref{eq:admis}) is defined as follows: first invert its premises (for $\tr^{\RI}$, only the left premise) using Lemma \ref{lem:RI:invert}. Then apply the corresponding generalized version of the rule in Theorem \ref{theorem:focus:sound:complete}.
+Finally, a right non-invertible rule in (\ref{eq:admis}) is defined as follows: first invert its premises (for $\tr^{\RI}$, only the left premise) using Lemma \ref{lem:RI:invert}. Then apply the corresponding generalized  rule in Proposition \ref{prop:GenRightRules}.
 % For example:
 % \begin{displaymath}
 %   \begin{array}{c}
@@ -1173,10 +1173,11 @@ For example, $\mathsf{focus} \ (\orrone \ f) = \orrone^{\RI} \ (\mathsf{focus} \
   \end{itemize}
 \end{theorem}
 \begin{proof}
-  The first bullet is proved by structural induction on the given equality proof $e : f \circeq g$. The other bullets are proved by structural induction on $f$. See the associated Agda formalization for more details.
+  The first bullet is proved by structural induction on the given equality proof $e : f \circeq g$. The other bullets are proved by structural induction on $f$. See the associated Agda formalization for details.
 \end{proof}
 
 \section{Extensions of the Logic}\label{sec:extensions}
+We now discuss some extensions of the sequent calculus and the focusing strategy.
 
 \subsection{Additive Units}\label{subsec:AddUnits}
 %\cheng{I think fully additive sequent calculus may not be a good name. Do you have any suggestion?}
@@ -1208,8 +1209,8 @@ The equivalence relation $\circeq$ is extended with two equations:
 \begin{equation*}\label{eq:units}
   \small
   \begin{array}{rclll}
-    f & \circeq \topr && f : S \mid \Gamma \vdash \top \\
-    f & \circeq \botl && f : \bot \mid \Gamma \vdash C
+    f & \circeq \topr && (f : S \mid \Gamma \vdash \top) \\
+    f & \circeq \botl && (f : \bot \mid \Gamma \vdash C)
   \end{array}
 \end{equation*}
 %types of equations $(i)$ each derivation ending with a sequent having $\top$ as its succedent is equivalent to a derivation with only one rule application $\topr$ and $(ii)$ each derivation ending with a sequent having $\bot$ in the context is equivalent to a derivation with only $\botl$.
@@ -1241,7 +1242,7 @@ The equivalence relation $\circeq$ is extended with two equations:
 %   \end{array}
 % \end{equation}
 %The idea behind the definition of $\circeq$ is that when $\topr$ or $\botl$ is applicable, we should convert the whole derivation into the appropriate one.
-Accordingly, in the focused sequent calculus we add $\topr$ in phase $\vdash_\RI$ and $\botl$ in phase $\vdash_\LI$, so  that they can be applied as early as possible.
+In the focused sequent calculus we add $\topr$ in phase $\vdash_\RI$ and $\botl$ in phase $\vdash_\LI$, so  that they can be applied as early as possible.
 We include a new tag $\tT$ for $\top$. The validity condition for lists of tags stays the same.
 \begin{equation*}\label{eq:focus:units}
   \begin{array}{c}
@@ -1333,7 +1334,7 @@ We include a new tag $\tT$ for $\top$. The validity condition for lists of tags 
 %\end{displaymath}
 %In this case, $\orrone$ generates and empty list of tags.
 
-Categorical models of the extended sequent calculus are the distributive monoidal categories of Section~\ref{sec:categorical} with additionally a terminal and an initial object, which moreover satisfy a \emph{(nullary) left-distributivity} (or \emph{absorption}) condition: the canonical morphism typed $0 \to 0 \ot C$ has an inverse $k : 0 \ot C \to 0$. The latter is used in the interpretation of the rule $\botl$.
+Categorical models of the extended sequent calculus are the distributive monoidal categories of Section~\ref{sec:categorical} with additionally a terminal and an initial object, which moreover satisfy a \emph{(nullary) left-distributivity} (or \emph{absorption}) condition: the canonical morphism typed $0 \to 0 \ot C$ has an inverse\linebreak $k : 0 \ot C \to 0$. The latter is used in the interpretation of the rule $\botl$.
 
 \subsection{Skew Exchange}\label{subsec:Ex}
 
@@ -1384,7 +1385,7 @@ Note that exchanging the formula in the stoup, whenever the latter is non-empty,
   \ex_{A , B}  (\ex_{A' , B'}  f) &\circeq & \ex_{A' , B'}  (\ex_{A , B}  f) &&(f: S \mid \Gamma , A , B , \Delta , A' , B' , \Lambda \vdash C)
 \end{array}
 \end{equation*}
-The first equation states that swapping the same two formulas twice yields the same result as doing nothing.
+The first equation states that swapping the same two formulae twice yields the same result as doing nothing.
 The second equation corresponds to the Yang-Baxter equation.
 %which states that the two possible ways of interchanging the order of three adjacent formulas $A , B , C$ to obtain the sequence $C , B , A$ are equivalent.
 The remaining equations are permutative conversions.
@@ -1477,7 +1478,7 @@ The focused sequent calculus is extended with a new phase $\vdash_\C$ (for `cont
   We start with a sequent $S \mid \Gamma \spl \quad \vdash_{\C}$ and end with a sequent $S \mid \quad \spl \Gamma' \vdash_{\C}$ where $\Gamma'$ is a permutation of $\Gamma$.
   In the process, the context is divided into two parts: $\Gamma \spl \Delta$, where the formulae in $\Gamma$ are ready to be moved while those in $\Delta$ have already been placed in their final position.
   Once all formulae in $\Gamma$ have been moved, we switch to phase $\vdash_\RI$ with an application of rule $\RI 2 \C$. 
-  Note that sequent in $\vdash_\C$ are not marked by list of tags, since after the application of right non-invertible rules there is no need to further permute formulae in context, and no new formulae appear can appear in context via an application of $\tl$ since the stoup is irreducible at this point.
+  Note that sequents in phase $\vdash_\C$ are not marked by list of tags, since after the application of right non-invertible rules there is no need to further permute formulae in context. Moreover, no new formulae can appear in context via applications of rule $\tl$, since the stoup is irreducible at this point.
 %  However, as previously mentioned, we only assume the existence of $l$ during the proof search, and we examine the validity after the search is completed.
 %  Therefore, we do not consider how to move tags in phase $\C$.
 
@@ -1621,8 +1622,8 @@ The focused sequent calculus is extended with a new phase $\vdash_\C$ (for `cont
 %Similar to the commutative extension, the premise of $\tl$ goes back to the context phase since it adds a new formula to the context.
 
 \subsection{Linear implication}\label{subsec:impl}
-Finally, we consider a deductive system for a skew version of non-commutative intuitionistic linear logic with additive conjunction and disjunction.
-This is obtained by extending the sequent calculus in (\ref{eq:seqcalc}) with a liner implication $\lolli$ and two introduction rules:
+Finally, we consider a deductive system for a skew version of Lambek calculus with additive conjunction and disjunction.
+This is obtained by extending the sequent calculus in (\ref{eq:seqcalc}) with a linear implication $\lolli$ and two introduction rules:
 \begin{displaymath}
   \begin{array}{c}
     \infer[\lleft]{A \lolli B \mid \Gamma , \Delta \vdash C}{
@@ -1665,11 +1666,11 @@ The presence of $\lolli$ requires the extension of the congruence relation $\cir
   \end{array}
 \end{equation*}
 
-The sequent calculus enjoys categorical semantics in skew monoidal categories with binary products and coproducts, which morover are endowed with a \emph{closed structure}, i.e. with a functor $\lolli : \mathbb{C}^{\mathsf{op}} \times \mathbb{C} \rightarrow \mathbb{C}$ forming an adjunction ${-} \ot B \dashv B \lolli {-}$ for all objects $B$ \cite{street:skew-closed:2013}. There is no need to require left-distributivity, since this can now be proved using the adjunction and the universal property of coproducts.
+The sequent calculus enjoys categorical semantics in skew monoidal categories with binary products and coproducts, which morover are endowed with a \emph{closed structure}, i.e. a functor $\lolli : \mathbb{C}^{\mathsf{op}} \times \mathbb{C} \rightarrow \mathbb{C}$ forming an adjunction ${-} \ot B \dashv B \lolli {-}$ for all objects $B$ \cite{street:skew-closed:2013}. There is no need to require left-distributivity, since this can now be proved using the adjunction and the universal property of coproducts.
 
-Notice that in non-commutative linear logic there exist two distinct linear implications, also called left and right residuals \cite{lambek:mathematics:58}. Our calculus includes a single implication $\lolli$. We currently do not know whether the inclusion of the second implication to our logic is a meaningful addition nor whether it corresponds to some particular categorical notion. 
+Notice that, in non-commutative linear logic, there exist two distinct linear implications, also called left and right residuals \cite{lambek:mathematics:58}. Our calculus includes a single implication $\lolli$. We currently do not know whether the inclusion of the second implication to our logic is a meaningful addition nor whether it corresponds to some particular categorical notion. 
 
-Let us now move to the extension of the focused sequent calculus. This is more complicated than the other extensions considered so far. In order to understand this complexity, let us include the two new rules $\lright$ and $\lleft$ to the ``naive'' focused sequent calculus in (\ref{eq:naive:focus}). The right $\lolli$-rule is invertible, so it belongs to phase $\vdash_\RI$, while the left rule is not, so it goes in phase $\vdash_\F$.
+We now discuss the extension of the focused sequent calculus. This is more complicated than the extensions considered in Sections \ref{subsec:AddUnits} and \ref{subsec:Ex}. In order to understand the increased complexity, let us include the two new rules $\lright$ and $\lleft$ in the ``naive'' focused sequent calculus in (\ref{eq:naive:focus}). The right $\lolli$-rule is invertible, so it belongs to phase $\vdash_\RI$, while the left rule is not, so it goes in phase $\vdash_\F$.
 \begin{displaymath}
   \begin{array}{c}
     \infer[\lleft]{A \lolli B \mid \Gamma , \Delta \vdash_\F P}{
@@ -1681,7 +1682,7 @@ Let us now move to the extension of the focused sequent calculus. This is more c
     \infer[\lright]{S \mid \Gamma \vdash_\RI A \lolli B}{S \mid \Gamma , A \vdash_\RI B}
   \end{array}
 \end{displaymath}
-As we know, this calculus is too permissive, so we need to come up with a way of restricting the non-determinism. As before, we still want to prioritize left non-invertible rules over right non-invertible ones, so we need to think of all situations when a right non-invertible rule must be applied before a left non-invertible one. The presence of $\lolli$ creates two new possibilities: $(i)$ $\lleft$ splits the context differently in different premises, or $(ii)$ left non-invertible rules manipulate formulae that have been moved to the context by applications of $\lright$ rules. To understand these situations, let us look at two examples.
+As we know, this calculus is too permissive, and the inclusion of the above rules even increases the non-deterministic choices in proof search. As a strategy for taming this non-determinism, as before we  decide to prioritize left non-invertible rules over right non-invertible ones. So we need to think of all possible situations when a right non-invertible rule must be applied before a left non-invertible one. The presence of $\lolli$ creates two new possibilities: $(i)$ $\lleft$ splits the context differently in different premises, or $(ii)$ left non-invertible rules manipulate formulae that have been moved to the context by applications of $\lright$ rules. To understand these situations, let us look at two examples.
 
 As an example of situation $(i)$, consider the sequent $\I \lolli \I \mid \I , Y \vdash_\F (\I \land \I) \ot Y$ and the following proof:
 \begin{equation}\label{eq:ex:lleft:NonDeter}
@@ -1733,8 +1734,9 @@ As an example of situation $(i)$, consider the sequent $\I \lolli \I \mid \I , Y
 Here $\tr$ must be applied first, before $\lleft$. In the proofs of the two premises of $\andr$, which prove the same sequent $\I \lolli \I \mid \I \vdash_\RI \I$ , the rule $\lleft$ splits the context in different ways: in the left branch the unit $\I$ in context is sent to the left premise, while in the right branch it is sent to the right branch. If the application of the rule $\lleft$ would have split the context in the same way, then we could have applied $\lleft$ before $\tr$.
 
 For $(ii)$, consider sequents ${-} \mid Y \vdash_{\F} (X \lolli X) \ot Y$ and $X \lolli Y \mid Z \vdash_{\F} (X \lolli Y) \ot Z$ with proofs:
-\begin{equation*}\label{eq:counterexample1}
+\begin{equation}\label{eq:counterexample1}
   \small
+    \proofbox{
        \infer[\tr]{{-} \mid Y \vdash_{\F} (X \lolli X) \ot Y}{
       \infer[\lright]{{-} \mid \quad \vdash_{\RI} X \lolli X}{
         \infer[\mathsf{sw}]{{-} \mid X \vdash_{\RI} X}{
@@ -1753,8 +1755,10 @@ For $(ii)$, consider sequents ${-} \mid Y \vdash_{\F} (X \lolli X) \ot Y$ and $X
           }
         }
       }
-     }
-\quad
+       }
+       }
+  \quad
+  \proofbox{
      \infer[\tr]{X \lolli Y \mid Z \vdash_{\F} (X \lolli Y) \ot Z}{
       \infer[\lright]{X \lolli Y \mid \quad \vdash_{\RI} X \lolli Y}{
         \infer[\mathsf{sw}]{X \lolli Y \mid X \vdash_{\RI} Y}{
@@ -1781,9 +1785,10 @@ For $(ii)$, consider sequents ${-} \mid Y \vdash_{\F} (X \lolli X) \ot Y$ and $X
           }
         }
       }
-     }     
-\end{equation*}
-In the first derivation, rule $\pass$ in the left branch of $\tr$ cannot be moved to the bottom of the proof tree, since formula $X$ is not yet in context, it becomes available only after the application of $\lright$. Analogously, in the second derivation, rule $\lleft$ in the left branch of $\tr$ cannot be moved to the bottom, since the formula $X$ that is sends to the left premise is appears in context only after the application of $\lright$.
+     }
+     }
+\end{equation}
+In the first derivation, rule $\pass$ in the left branch of $\tr$ cannot be moved to the bottom of the proof tree, since formula $X$ is not yet in context, it becomes available only after the application of $\lright$. Analogously, in the second derivation, rule $\lleft$ in the left branch of $\tr$ cannot be moved at the bottom, since the formula $X$ that it sends to the left premise appears in context only after the application of $\lright$.
 
 %To eliminate undesired non-determinism and maintain completeness with \SkNMILLA, we incorporate (\ref{eq:focus}) into the focused calculus in the section 4.2 of \cite{UVW:protsn} which employs tags to track formulae which are moved from the succedent to context via applications of the rule $\lright$.
 %Therefore in the new focused calculus, following any right non-invertible rule, a new applicable right invertible rule $\lright$ is introduced, where any formula $A$ moved from succedent to context via $\lright$ is marked as $A^{\bullet}$.
@@ -1875,10 +1880,11 @@ In the first derivation, rule $\pass$ in the left branch of $\tr$ cannot be move
 % validity condition is extended by two cases, where the first one distinguishes the situation where there is at least one new formula introduced in the context due to the previous right non-invertible rule, while the second captures cases of essential non-determinism and avoids situations where all the contexts of the corresponding sequents of $l$ are split in the same way.
 %It is worth noting that the context of an application of $\lleft$ can be split at different new formula occurrences.
 
-This motivates the addition of two new tags on top of $\tP,\tCone,\tCtwo$ and $\tE$, corresponding to the two situations previously discussed: $\Gamma$, for each context $\Gamma$, and $\bullet$.  The validity condition for list of tags also needs to be updated. A list of tags $l$ is now valid if it is non-empty and either $(i)$ $\tE \in l$, $(ii)$ both $\tCone \in l$ and $\tCtwo \in l$,  $(iii)$ there exist contexts $\Gamma , \Gamma'$ such that $ \Gamma \in l$, $ \Gamma' \in l$ and $ \Gamma \neq  \Gamma'$, or $(iv)$ $\bullet \in l$. Following \cite{UVW:protsn}, on top of tag annotations for sequents, we also require tag annotations for formulae in context. There is only one tag $\bullet$ for formulae. The tag on the formula $A^\bullet$ means that $A$ has been previously moved to the context by an application of $\lright$ in phase $\vdash^l_\RI$.
+This motivates the addition of two new tags, corresponding to the two situations previously discussed: on top of $\tP,\tCone,\tCtwo$ and $\tE$, a tag could either be of the form $\Gamma$, for each context $\Gamma$, or of the form $\bullet$.  The validity condition for list of tags needs to be updated. A list of tags $l$ is now valid if it is non-empty and either $(i)$ $\tE \in l$, $(ii)$ both $\tCone \in l$ and $\tCtwo \in l$,  $(iii)$ there exist contexts $\Gamma , \Gamma'$ such that $ \Gamma \in l$, $ \Gamma' \in l$ and $ \Gamma \neq  \Gamma'$, or $(iv)$ $\bullet \in l$. Following \cite{UVW:protsn}, on top of tag annotations for sequents, we also require tag annotations for formulae in context. There is only one tag $\bullet$ for formulae. The tag on the formula $A^\bullet$ means that $A$ has been previously moved to the context by an application of $\lright$ in phase $\vdash^l_\RI$.
 
 Here are the inference rules of the focused sequent calculus with linear implication:
-\begin{equation*}\label{eq:focus:impl}
+\begin{equation}\label{eq:focus:impl}
+  \!
   \begin{array}{lc}
     \text{(right invertible)} & %\\[-4pt] &
     \proofbox{
@@ -1887,9 +1893,9 @@ Here are the inference rules of the focused sequent calculus with linear implica
         &
         S \mid \Gamma \vdash^{l_2?}_{\RI} B
       }
-    \qquad
+    \quad
     \infer[\lright]{S \mid \Gamma \vdash^{l?}_{\RI} A \lolli B}{S \mid \Gamma , A^{\bullet ?} \vdash^{l?}_{\RI} B}
-    \qquad
+    \quad
     \infer[\LI 2 \RI]{S \mid \Gamma \vdash^{t?}_{\RI} P}{S \mid \Gamma \vdash^{t?}_{\LI} P}
     }
     \\[10pt]
@@ -1935,13 +1941,13 @@ Here are the inference rules of the focused sequent calculus with linear implica
       &
       l \ \text{valid}
     }
-    \quad
+    \;
     \infer[\orrone]{T \mid \Gamma \vdash^{\tE?}_{\F} A \lor B}{
       T \mid \Gamma^{\circ} \vdash^{l}_{\RI} A
       &
       l \ \text{valid}
     }
-    \quad
+    \;
     \infer[\orrtwo]{T \mid \Gamma \vdash^{\tE?}_{\F} A \lor B}{
       T \mid \Gamma^{\circ} \vdash^{l}_{\RI} B
       &
@@ -1961,14 +1967,15 @@ Here are the inference rules of the focused sequent calculus with linear implica
       }
     }
   \end{array}
-\end{equation*}
-Again $P$ indicates a non-negative formula, which now means that its principal connective is not $\land$ nor $\lolli$. Notation $\Gamma^{\bullet}$ means that all the formulae in $\Gamma$ are tagged, while $\Gamma^{\circ}$ indicates that all the tags on formulae in $\Gamma$ have been erased. We write $A^{\bullet?}$ to denote $A$ if the formula appears in an untagged sequent and $A^\bullet$ if it appears in a sequent marked with list of tags.
+\end{equation}
+Again $P$ indicates a non-negative formula, which now means that its principal connective is not $\land$ nor $\lolli$. Notation $\Gamma^{\bullet}$ means that all the formulae in $\Gamma$ are tagged, while $\Gamma^{\circ}$ indicates that all the tags on formulae in $\Gamma$ have been erased. We write $A^{\bullet?}$ to denote $A$ if the formula appears in an untagged sequent and $A^\bullet$ if it appears in a sequent marked with list of tags $l$ or a single tag $t$.
 
-Tags of the form $ \Gamma$ are used to record different splitting of context in applications of $\lleft$, while tag $\bullet$ is marks when rule $\lleft$ sends tagged formulae to the left premise and when rule $\pass$ moves a tagged formula to the stoup.
+Tags of the form $t = \Gamma$ are used to record different splitting of context in applications of $\lleft$, while tag $t = \bullet$ marks when rule $\lleft$ sends tagged formulae to the left premise and when rule $\pass$ moves a tagged formula to the stoup.
 %We discuss some key differences with (\ref{eq:focus}).
 %\begin{itemize}
 %  \item The positive formula $P$ now means that $P$ is not in the form of $\land$ nor $\lolli$. $A^{\bullet}$ means that $A$ is tagged and $\Gamma^{\bullet}$ means that all the formula occurrences in $\Gamma$ are tagged. $\Gamma^{\circ}$ means that all the tags of the formula occurrences in $\Gamma$ are erased.
-Rule $\lright$  moves formulae from the succedent to the context. If its conclusion is marked by a list of tags $l$, then $A$ in the premise is a new formula in context and it is tagged with $\bullet$.
+
+Rule $\lright$  moves a formula $A$ from the succedent to the right end of the context. If its conclusion is marked by a list of tags $l$, then $A$ is also tagged with $\bullet$.
 %\item The side condition in the rule $\pass$ should be read as follows.
 %If $A$ is untagged, then the sequent is either untagged (so there is no $t$) or the tag $t$ is equal to $\tP$.
 %If $A$ is tagged, then $t = \bullet$.
@@ -1978,15 +1985,15 @@ Rule $\lright$  moves formulae from the succedent to the context. If its conclus
 
 The side condition in rule $\lleft$ should be read as follows. If $\Delta$ is empty, then the sequent is either untagged (so there is no $t$) or the tag $t$ is equal to $ \Gamma$. If $\Delta$ is non-empty, then $t = \bullet$. In particular,
 %Checking whether $\Delta$ is empty or not is crucial here. If it is non-empty, then
-$\Delta^\bullet$ contains at least one tagged formula, which must have appeared in context from an application of $\lright$. If $\Delta$ is empty and $t = \Gamma$, no new (meaning tagged with $\bullet$) formula is moved to the left premise. If $t = \Gamma$ then we are performing proof search inside the premise of a right non-invertible rule and $t$ belongs to some valid list of tags $l$, and $l$ could be valid because of a different branch where $\lleft$ is also applied but the context has been split differently (so its tag would be $ \Gamma'$ for some $\Gamma \not= \Gamma'$).
+$\Delta^\bullet$ contains at least one tagged formula, which must have appeared in context from an application of $\lright$. If $\Delta$ is empty and $t = \Gamma$, no new (meaning: tagged with $\bullet$) formula is moved to the left premise. If $t = \Gamma$ then we are performing proof search inside the premise of a right non-invertible rule and $t$ belongs to some valid list of tags $l$. List $l$ could be valid because of a different branch in the proof tree where $\lleft$ is also applied but the context has been split differently (so its tag would be $ \Gamma'$ for some $\Gamma \not= \Gamma'$).
 
-Rule $\pass$ has a similar side condition to $\lleft$. If $A$ does not have a tag, then the sequent is also untagged or the tag $t$ is equal to $\tP$. If $A$ has tag $\bullet$, then $t$ must also be $\bullet$. In other words, if $t = \bullet$ then the formula that moves to the stoup must also be tagged with $\bullet$, i.e. must have been added to the context by an application of $\lright$.
+Rule $\pass$ has a similar side condition to $\lleft$. If $A$ does not have a tag, then the sequent is also untagged or the tag $t$ is equal to $\tP$. If $A$ has tag $\bullet$, then $t$ must also be $\bullet$. In other words, if $t = \bullet$ then the formula that $\pass$ moves to the stoup must also be tagged with $\bullet$, i.e. must have been added to the context by an application of $\lright$.
 %  The inhabited or non-inhabited nature of $\Delta$ is crucial because if there is any formula occurrence in $\Delta$, then it indicates that there is an application of a right non-invertible rule before $\lleft$ and the order of rule applications is guaranteed due to the new formula occurrences in $\Delta$.
 %  If $\Delta$ is empty, then either there is no application of right non-invertible rule before or there is an application of a right non-invertible rule before $\lleft$ is but there is no formula moved to the context via $\lright$.
 %  In the latter case, tags are used to record the splitting of contexts.
 %\end{itemize}
 
-We can reconstruct the derivation in (\ref{eq:ex:lleft:NonDeter}) within the focused sequent calculus in (\ref{eq:focus:impl}).
+We can reconstruct the derivation in (\ref{eq:ex:lleft:NonDeter}) within the focused sequent calculus with tags in (\ref{eq:focus:impl}).
 \begin{displaymath}\small
   \infer[\sw]{\I \lolli \I \mid \I , Y \vdash_{\RI} (\I \land \I) \ot Y}{
     \infer[\tr]{\I \lolli \I \mid \I , Y \vdash_{\F} (\I \land \I) \ot Y}{
@@ -2062,7 +2069,7 @@ The proofs with tags of the derivations in (\ref{eq:counterexample1}) can be fou
 % To obtain a generalization of theorem (\ref{theorem:focus:sound:complete}), we generalize the three lemmata (\ref{lem:RI:invert})
 %\section{Formalization}\label{sec:formalization}
 
-Proving completeness of the extended focused sequent calculus is more involved. In fact, the complication resides in stating and proving the analog of Proposition \ref{prop:GenRightRules}. First, define an operation $\mathsf{impconj}(A)$ which produces a list of pairs of lists of formulae and formulae as follows: 
+Proving completeness of the extended focused sequent calculus is more involved than in the absence of implication. Concretely, the complication resides in stating and proving the analog of Proposition \ref{prop:GenRightRules}. First, define an operation $\mathsf{impconj}(A)$ which produces a list of pairs of lists of formulae and formulae as follows: 
 \begin{displaymath}
   \begin{array}{rll}
     \impconj{A} &= \impconj{A'} , \impconj{B'} &\text{when } A = A' \land B'
@@ -2076,7 +2083,7 @@ Proving completeness of the extended focused sequent calculus is more involved. 
 \end{displaymath}
 % $\impconj{A} = \impconj{A'} , \impconj{B'}$ if $A = A' \land B'$, $\impconj{A} = ([(A' , \Gamma'_1) , \dots , (A' , \Gamma'_n)] , [B_1 , \dots , B_n])$ if $A = A' \lolli B'$ and $\impconj{B} = ([\Gamma'_1 , \dots , \Gamma'_n] , [B_1 , \dots , B_n])$ and $\impconj{A} = ([\ ] , A)$ otherwise.
 % \niccolo{give definition}.
-The statement of Proposition \ref{prop:GenRightRules} for focused sequent calculus in (\ref{eq:focus:impl}) then becomes:
+The statement of Proposition \ref{prop:GenRightRules} for the focused sequent calculus in (\ref{eq:focus:impl}) then becomes:
 \begin{proposition}\label{prop:GenRightRules:impl}
   The following rules
   \begin{displaymath}
@@ -2116,7 +2123,7 @@ This paper takes one step further in a large project aiming at modular analysis 
 
 
 \paragraph{Acknowledgements}
-This work was supported by the Estonian Research Council grant PSG749.
+This work was supported by the Estonian Research Council grant PSG749 and the ESF funded Estonian IT Academy research measure (project 2014-2020.4.05.19-0001). Wan was partially supported by  COST CA19135 - Connecting Education and Research Communities for an Innovative Resource Aware Society.
 % N.V.\ and T.U.\ were supported by the
 % Estonian Research Council grants no. \linebreak PSG659, PSG749 and PRG1210, N.V.\ and
 % C.-S.W.\ by the ESF funded Estonian IT Academy research measure
